Se implementa rellenado de options dinamico

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               type="text"
               name="ciudad"
               id="ciudad"
-              placeholder="Escribe tu Ciudad"
+              placeholder="Consulta una ciudad"
               class="w-full p-2 rounded"
             />
           </div>
@@ -132,20 +132,7 @@
               id="pais"
             >
               <option disabled selected value="">-- Seleccione --</option>
-              <option value="AR">Argentina</option>
-              <option value="CO">Colombia</option>
-              <option value="CR">Costa Rica</option>
-              <option value="ES">España</option>
-              <option value="US">Estados Unidos</option>
-              <option value="MX">México</option>
-              <option value="PE">Perú</option>
-              <option value="UY">Uruguay</option>
-              <option value="PY">Paraguay</option>
-              <option value="CL">Chile</option>
-              <option value="BO">Bolivia</option>
-              <option value="BR">Brasil</option>
-              <option value="EC">Ecuador</option>
-              <option value="VE">Venezuela</option>
+              <!--Se rellenará dinamicamente consultado API-->
             </select>
           </div>
 
