Se agrega enlace a linkedin en footer

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ES">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buscador Clima</title>
+    <title>Estado del tiempo</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/tailwind.min.css" rel="stylesheet" />
   </head>
@@ -13,7 +13,7 @@
         id="titulo"
         class="text-4xl font-bold uppercase text-center py-6"
       >
-        Buscador del Clima
+        Estado del tiempo
       </h1>
     </header>
     <div class="container mx-auto my-auto ">
@@ -146,10 +146,15 @@
     </div>
 
      <footer class="bg-naranja py-6 mt-48">
-      <p class="text-xl text-center">Pagina web creada por <a class="font-bold" href="https://www.linkedin.com/in/julian-martinez-dev/" rel="nofollow noopener noreferrer" target="_blank">Julian Martinez</a></p>
-      <a href="https://github.com/julianmartinez-dev" rel="nofollow noopener noreferrer" target="_blank"><img class="mx-auto h-12 mt-2"src="assets/github-icon.svg" alt="icono gitbut"></a>
+      <p class="text-xl text-center">Pagina web creada por <span class="font-bold">Julian Martinez</span></p>
+      <div class="flex justify-center" >
+        <a title="Ingresa a mis respositorios"href="https://github.com/julianmartinez-dev" rel="nofollow noopener noreferrer" target="_blank"><img class="h-12 mt-2"src="assets/github-icon.svg" alt="icono gitbut"></a>
+
+        <a title="Contactame por Linkedin" class="ml-4"href="https://www.linkedin.com/in/julian-martinez-dev/" rel="nofollow noopener noreferrer" target="_blank"><img class="h-12 mt-2"src="assets/linkedin.png" alt="icono gitbut"></a>
+
+      </div>
       
-   
+      
     </footer>
    
 
