Se agrega favicon a la web

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Estado del tiempo</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/tailwind.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/pbg" href="assets/favicon.png"/>
   </head>
   <body class="bg-gray-800 ">
     <header class="bg-naranja mb-12">
@@ -148,7 +149,7 @@
      <footer class="bg-naranja py-6 mt-48">
       <p class="text-xl text-center">Pagina web creada por <span class="font-bold">Julian Martinez</span></p>
       <div class="flex justify-center" >
-        <a title="Ingresa a mis respositorios"href="https://github.com/julianmartinez-dev" rel="nofollow noopener noreferrer" target="_blank"><img class="h-12 mt-2"src="assets/github-icon.svg" alt="icono gitbut"></a>
+        <a title="Ingresa a mis respositorios"href="https://github.com/julianmartinez-dev/consultar-el-clima" rel="nofollow noopener noreferrer" target="_blank"><img class="h-12 mt-2"src="assets/github-icon.svg" alt="icono gitbut"></a>
 
         <a title="Contactame por Linkedin" class="ml-4"href="https://www.linkedin.com/in/julian-martinez-dev/" rel="nofollow noopener noreferrer" target="_blank"><img class="h-12 mt-2"src="assets/linkedin.png" alt="icono gitbut"></a>
 
